fix extra space for historical veiw

--- a/PingEnergy/public/stylesheets/style.css
+++ b/PingEnergy/public/stylesheets/style.css
@@ -145,9 +145,10 @@ svg{
 	border: solid 1px black;
 	border-radius: 20px;
 	text-align: left;
-	height: 110px;
+	height: 135px;
 	width: 700px;
-	margin-top: 2%;
+	/*margin-top: 2%;*/
+	font-size: 1.5em;
 /*	margin-left: 200px;
 	margin-right: 100px;*/
 }
@@ -158,9 +159,10 @@ svg{
 	border-radius: 20px;
 	text-align: left;
 	width: 50%;
-	height: 90%;
+	height: auto;
 	margin-top: .4%;
 	padding-left:2%;
+	display: hidden;
 }
 
 .day {
